[gd_scene load_steps=5 format=3 uid="uid://dv7bqxhadg754"]

[ext_resource type="Shader" path="res://src/shaders/blur.gdshader" id="1_lk03p"]
[ext_resource type="Texture2D" uid="uid://b0pfn3wcd5hwa" path="res://icon.svg" id="2_t6ncg"]
[ext_resource type="Script" path="res://src/modules/local_video/video/video_item_container.gd" id="3_lrdkl"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2ynle"]
shader = ExtResource("1_lk03p")
shader_parameter/strength = 10.0
shader_parameter/iChannel0 = ExtResource("2_t6ncg")

[node name="VideoItemContainer" type="PanelContainer"]
material = SubResource("ShaderMaterial_2ynle")
custom_minimum_size = Vector2(256, 280)
offset_right = 256.0
offset_bottom = 280.0
theme_type_variation = &"VideoItemPanel"
script = ExtResource("3_lrdkl")

[node name="V" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="TextureMargin" type="MarginContainer" parent="V"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="CoverPicture" type="TextureRect" parent="V/TextureMargin"]
clip_contents = true
custom_minimum_size = Vector2(252, 141.75)
layout_mode = 2
texture = ExtResource("2_t6ncg")
expand_mode = 1
stretch_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="V"]
layout_mode = 2

[node name="TimeMargin" type="MarginContainer" parent="V"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10

[node name="TimeLabel" type="Label" parent="V/TimeMargin"]
layout_mode = 2
text = "爱笑的眼睛
"

[node name="NameMargin" type="MarginContainer" parent="V"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10

[node name="NameLabel" type="Label" parent="V/NameMargin"]
custom_minimum_size = Vector2(230, 0)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 20
text = "爱笑的眼睛
"
text_overrun_behavior = 4

[node name="DoubleClickTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true
